2010-01-21  Graham Cobb  <g+770@cobb.uk.net>

	* event.c (event_duplicate): do not copy the pointers for
	the byday and categories lists

2009-09-14  Graham Cobb  <g+770@cobb.uk.net>

	* sqlite.c (event_db_readonly): do not close the database by hand as
	it is closed automatically when unref'ing
	(event_db_new): do not close the database by hand as
	it is closed automatically when unref'ing
	(sqlite_db_finalize): only close DB if it has been opened

2008-10-22  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (event_duplicate): New declaration.
	* event.c (event_duplicate): New function.

2008-07-15  Graham Cobb  <g+770@cobb.uk.net>

	* event.c (event_flush): Do not crash when event is not modified,
	only if database is readonly.

2008-07-12  Florian Boor <florian@linuxtogo.org>

	* event-db.c, event.h, event-db.h:
	Replace macros LIVE, RW, SIGNAL_ERROR, SIGNAL_ERROR_GERROR
	with inline functions. Fixes #156

2008-06-23  Graham Cobb  <g+770@cobb.uk.net>

	* Makefile.am (libeventdb_la_LDFLAGS): Increase version to 2.1.0.

	* sqlite.c (do_list_unacknowledged_alarms): Remove unacknowledged alarms
	if start time is wrong (as acknowledgement will never work in that case)

	* sqlite.c (do_set_default_calendar): Add g_assert checks that no updates
	are made to readonly databases.

	* event-db.c, event.c, event.h: Handle readonly databases

	* event-db.h (struct _EventDB): Add readonly flag to _EventDB

	* gpe/event-db.h: Add event_db_readonly to open event database as read only.

2008-05-02  Graham Cobb  <g+770@cobb.uk.net>

	* sqlite.c (event_db_new): remove extra rows from alarms_fired_through after
	we read it.

2008-05-01  Graham Cobb  <g+770@cobb.uk.net>

	* event-db.c (buzzer): update alarms_fired_through on all paths through buzzer, otherwise
	it doesn't get updated when an event goes off and the event can get repeated

	* sqlite.c (event_db_new): make alarms_fired_through_callback find the maximum time
	from the rows in the table
